# cmaketools

./: CMakeLists.txt  README.md
CMakeModules/: CMakeLists.txt  MakeIncludable.cmake
examples/: CMakeLists.txt  LargeFile.h  include-large-file.cpp
